--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christian Zimsen - Renewable Energy Professional</title>
+    <title>Cliff Zimsen - Transformational Leader</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Lucide Icons -->
@@ -11,12 +11,11 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Christian Zimsen - Renewable Energy Professional specializing in sustainable solutions and climate positive change">
-    <meta name="keywords" content="renewable energy, sustainability, climate change, wind energy, solar power">
+    <meta name="description" content="Cliff Zimsen - Renewable Energy Professional specializing in sustainable solutions and climate positive change">
+    <meta name="keywords" content="renewable energy, sustainability, climate change, wind energy, solar power">	
 	<!-- Favicon -->
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
-	<link rel="icon" type="image/svg+xml" href="favicon.svg">
-
+	<link rel="icon" type="image/svg+xml" href="favicon-svg.svg">
 	<!-- Custom JavaScript -->
 	<script src="main.js" defer></script>
 </head>
@@ -41,16 +40,17 @@
         <div class="max-w-7xl mx-auto px-4 py-20">
             <div class="text-center">
                 <img 
-                    src="https://images.unsplash.com/photo-1534529679512-dd10d316715f?w=400&h=400&q=80&crop=faces&fit=crop" 
+			class="profile-img"
+                    src="assets/HeadshotLEFT.png" 
                     alt="Profile" 
                     class="w-32 h-32 rounded-full mx-auto mb-8 shadow-lg border-4 border-white"
                 >
                 <h1 class="text-4xl font-bold text-gray-900 mb-4">
-                    <span class="block">Christian Zimsen</span>
-                    <span class="text-emerald-700">Renewable Energy Professional</span>
+                    <span class="block">Cliff Zimsen</span>
+                    <span class="text-emerald-700">A Catalyst for Climate-Positive Change</span>
                 </h1>
                 <p class="text-xl text-gray-600 mb-8 max-w-2xl mx-auto">
-                    Committed to driving sustainable transformation and climate positive change through innovative renewable energy solutions
+                    Committed to driving sustainable transformation and climate-positive change through innovative solutions, empowering people as the cornerstone of success
                 </p>
 
                 <!-- Key Areas -->
@@ -60,12 +60,16 @@
                         <span class="text-sm font-medium">Wind Energy</span>
                     </div>
                     <div class="flex flex-col items-center text-emerald-600">
-                        <i data-lucide="sun" class="w-8 h-8 mb-2"></i>
-                        <span class="text-sm font-medium">Solar Power</span>
+                        <i data-lucide="trash-2" class="w-8 h-8 mb-2"></i>
+                        <span class="text-sm font-medium">Waste to Resource</span>
                     </div>
                     <div class="flex flex-col items-center text-emerald-600">
-                        <i data-lucide="leaf" class="w-8 h-8 mb-2"></i>
-                        <span class="text-sm font-medium">Sustainability</span>
+                        <i data-lucide="battery-charging" class="w-8 h-8 mb-2"></i>
+                        <span class="text-sm font-medium">ESS </span>
+                    </div>
+                    <div class="flex flex-col items-center text-emerald-600">
+                        <i data-lucide="sun" class="w-8 h-8 mb-2"></i>
+                        <span class="text-sm font-medium">Solar Power</span>
                     </div>
                 </div>
 
@@ -84,10 +88,10 @@
                     <a href="https://github.com/username" target="_blank" rel="noopener noreferrer">
                         <i data-lucide="github" class="w-6 h-6 text-gray-600 hover:text-emerald-600 transition-colors"></i>
                     </a>
-                    <a href="https://linkedin.com/in/username" target="_blank" rel="noopener noreferrer">
+                    <a href="https://linkedin.com/in/cliff-zimsen" target="_blank" rel="noopener noreferrer">
                         <i data-lucide="linkedin" class="w-6 h-6 text-gray-600 hover:text-emerald-600 transition-colors"></i>
                     </a>
-                    <a href="mailto:email@example.com">
+                    <a href="mailto:c.zimsen@gmail.com">
                         <i data-lucide="mail" class="w-6 h-6 text-gray-600 hover:text-emerald-600 transition-colors"></i>
                     </a>
                 </div>
