--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
         <div class="max-w-7xl mx-auto px-4 py-20">
             <div class="text-center">
                 <img 
-			class="profile-img"
+			class="profile-img w-32 h-32 rounded-full object-cover mx-auto mb-8 shadow-lg border-4 border-white"
                     src="assets/HeadshotLEFT.png" 
                     alt="Profile" 
-                    class="w-32 h-32 rounded-full mx-auto mb-8 shadow-lg border-4 border-white"
                 >
                 <h1 class="text-4xl font-bold text-gray-900 mb-4">
                     <span class="block">Cliff Zimsen</span>
