--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="max-w-7xl mx-auto px-4 py-20">
             <div class="text-center">
                 <img 
-			class="profile-img w-32 h-32 rounded-full object-cover mx-auto mb-8 shadow-lg border-4 border-white"
+			class="profile-img w-96 h-96 rounded-full object-cover mx-auto mb-8 shadow-lg border-4 border-white"
                     src="assets/HeadshotLEFT.png" 
                     alt="Profile" 
                 >
@@ -184,7 +184,7 @@
             <p class="text-lg text-gray-600">
                 Email me at 
                 <a href="mailto:email@example.com" class="text-emerald-600 hover:text-emerald-700 transition-colors">
-                    email@example.com
+                    c.zimsen@gmail.com
                 </a>
             </p>
         </div>
